# OmniRec

./: .gitignore  404.html  Docu.md  README.md  algorithm_config.py  available_algorithms.py  execution_master.py  hpc_algorithm_names.py  hpc_clear_data.py  hpc_convert_processed_to_atomic.py  hpc_convert_raw_to_processed.py  hpc_data_set_names.py  hpc_metadata_to_html.py  hpc_recbole_evaluate.py  hpc_recbole_fit.py  hpc_recbole_predict.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  recsys_data_set.py  run_clear_data.py  run_elliot.py  run_metadata_to_html.py  settings.py  sitemap.xml
API_references/: index.html
about_us/: index.html
algorithms_overview/: index.html
checkpointing/: index.html
conf_algo/: index.html
data_loaders/: adressa_one_week.py  alibaba_ifashion.py  alibaba_mobile.py  amazon2014_books.py  amazon2014_electronics.py  amazon2014_movies_and_tv.py  amazon2018_all_beauty.py  amazon2018_fashion.py  amazon2018_home_and_kitchen.py  amazon2018_kindle_store.py  amazon2018_movies_and_tv.py  amazon2018_pet_supplies.py  amazon2018_tools_and_home_improvement.py  amazon2018_toys_and_games.py  amazon_mp3.py  anime.py  beer.py  beeradvocate.py  contentwise_impressions.py  cosmeticsshop.py  deliveryhero_sg.py  deliveryhero_tw.py  dianping_sequentialrec.py  dianping_socialrec.py  digg.py  docear_recommendations.py  douban_movie.py  dunnhumby.py  eachmovie.py  echonest.py  endomondo.py  epinions_extended.py  epinions_social.py  foursquare_global.py  foursquare_global1.py  foursquare_global2.py  globo.py  goodreads.py  goodreads_children.py  goodreads_comics_and_graphic.py  (+95 more)
datasets_overview/: index.html
docs/: API_references.md  about_us.md  algorithms_overview.md  checkpointing.md  conf_algo.md  datasets_overview.md  evaluator.md  feature_overview.md  getting_started.md  index.md  links.json  loading_datasets.md  preprocessing.md  slurm_integration.md
docs/pruned/: data_statistics_interactive.html  data_statistics_static.html  data_statistics_static.md
docs/unpruned/: data_statistics_interactive.html  data_statistics_static.html  data_statistics_static.md
evaluator/: index.html
feature_overview/: index.html
getting_started/: index.html
loading_datasets/: index.html
preprocessing/: index.html
search/: search_index.json
slurm_integration/: index.html
src/omnirec/: __init__.py  data_variants.py  recsys_data_set.py
src/omnirec/cli/: __init__.py  cmd_base.py  gen_algos.py  gen_datasets.py
src/omnirec/data_loaders/: adressa.py  amazon.py  (+19 more)
src/recsyslib/: __init__.py  data_variants.py  recsys_data_set.py  util.py
(+39 files in other folders)
