[project]
name = "recsyslib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    # TODO: Add other authors
    { name = "Moritz Baumgart", email = "moritz.baumgart@student.uni-siegen.de" },
]
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.3.0",
    "requests>=2.32.4",
    "rpyc>=6.0.2",
    "scikit-learn>=1.7.0",
    "tqdm>=4.67.1",
    "uv>=0.8.0",
]

[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
wheel-exclude = ["src/recsyslib/data"]
source-exclude = ["src/recsyslib/data"]

[dependency-groups]
dev = [
    "matplotlib>=3.10.3",
    "tabulate>=0.9.0",
]
